Refactoring of the basic-test file
https://github.com/Juicy/juicy-tile-editor/issues/139

--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -30,20 +30,22 @@
                     (function () {
                         var script = document._currentScript || document.currentScript;
                         var tempalte = script.previousElementSibling;
-                        var setup = {
-                            gutter: 0,
-                            width: 480,
-                            direction: "horizontal",
-                            items: [
-                                { width: "100%", widthFlexible: true, id: 0, hidden: false, heightDynamic: true, height: 1, priority: 1 },
-                                { width: "100%", widthFlexible: true, id: 1, hidden: false, heightDynamic: true, height: 1, priority: 0.9 }
-                            ]
+                        var setup = function () {
+                            return JSON.parse(JSON.stringify({
+                                gutter: 0,
+                                width: 480,
+                                direction: "horizontal",
+                                items: [
+                                    { width: "100%", widthFlexible: true, id: 0, hidden: false, heightDynamic: true, height: 1, priority: 1 },
+                                    { width: "100%", widthFlexible: true, id: 1, hidden: false, heightDynamic: true, height: 1, priority: 0.9 }
+                                ]
+                            }));
                         };
 
                         tempalte.model = {
-                            setup0: JSON.parse(JSON.stringify(setup)),
-                            setup1: JSON.parse(JSON.stringify(setup)),
-                            setupCopy: JSON.parse(JSON.stringify(setup))
+                            setup0: setup(),
+                            setup1: setup(),
+                            setupCopy: setup()
                         };
                     })();
                 </script>
@@ -51,91 +53,24 @@
         </template>
     </test-fixture>
 
+    <script src="helpers.js"></script>
     <script>
         var page = {
             width: 1000
         };
 
-        function fireEvent(obj, evt, ctrl) {
-            var fireOnThis = obj;
-
-            if (document.createEvent) {
-                //var evObj = document.createEvent(evt.indexOf("mouse") > -1 ? "MouseEvents" : "KeyboardEvent");
-                var evObj = document.createEvent("MouseEvents", { ctrlKey: true });
-                evObj.ctrlKey = !!ctrl;
-                evObj.initEvent(evt, true, false);
-                fireOnThis.dispatchEvent(evObj);
-
-            } else if (document.createEventObject) {
-                var evObj = document.createEventObject();
-                evObj.ctrlKey = !!ctrl;
-                fireOnThis.fireEvent("on" + evt, evObj);
-            }
-        }
-
-        //Required to trigger fast-json-patch dirty checking
-        function fireClickEvent() {
-            var body = document.querySelector("body");
-            fireEvent(document.documentElement, "mouseup");
-        }
-
-        function click(element, timeout) {
-            if (!timeout) {
-                element.click();
-                return;
-            }
-
-            setTimeout(function () {
-                click(element);
-            }, timeout);
-        }
-
-        function dblclick(element, timeout) {
-            if (!timeout) {
-                fireEvent(element, "dblclick");
-                return;
-            }
-
-            setTimeout(function () {
-                dblclick(element);
-            }, timeout);
-        }
-
-        function ctrlClick(element, timeout) {
-            if (!timeout) {
-                console.error("ctrlClick is not implemented");
-                return;
-            }
-
-            setTimeout(function () {
-                ctrlClick(element);
-            }, timeout);
-        }
-
         suite("<juicy-tile-simple-editor>", function () {
             var fix;
             var editor;
-            var table0;
-            var table1;
-            var div00, div01, div10, div11;
-            var td00, td01, td10, td11;
+            var tables;
+            var tw;
 
             setup(function () {
                 fix = fixture("editor-form-fixture");
                 editor = fix.querySelector("juicy-tile-simple-editor");
 
-                table0 = fix.querySelector("juicy-tile-table#table-0");
-                table1 = fix.querySelector("juicy-tile-table#table-1");
-
-                div00 = table0.querySelector("div.tile-0");
-                div01 = table0.querySelector("div.tile-1");
-                div10 = table1.querySelector("div.tile-0");
-                div11 = table1.querySelector("div.tile-1");
-
-                td00 = function () { return Polymer.dom(table0.shadowRoot).querySelector("td[id='0']"); }
-                td01 = function () { return Polymer.dom(table0.shadowRoot).querySelector("td[id='1']"); }
-                td10 = function () { return Polymer.dom(table1.shadowRoot).querySelector("td[id='0']"); }
-                td11 = function () { return Polymer.dom(table1.shadowRoot).querySelector("td[id='1']"); }
+                tables = Array.prototype.slice.call(fix.querySelectorAll("juicy-tile-table"));
+                tw = new JuicyTileTableWrapper(tables[0]);
 
                 fix.style.width = page.width + "px";
 
@@ -145,8 +80,9 @@
             });
 
             test("finds all <juicy-tile-table> on the page", function () {
-                assert.equal(editor.lists[0], table0);
-                assert.equal(editor.lists[1], table1);
+                tables.forEach(function (t, i) {
+                    expect(editor.lists[i]).to.equal(t);
+                });
             });
 
             test("hides and shows sidebar", function (done) {
@@ -159,76 +95,83 @@
                     var tree = Polymer.dom(editor.root).querySelector(".editor-tree");
                     var btn = Polymer.dom(editor.root).querySelector(".editor-tabs button.btn-tree");
 
-                    assert.equal(tree.style.display, "none");
+                    expect(tree).to.have.deep.property("style.display", "none");
                     click(btn, 25);
                 }, 150);
 
                 setTimeout(function () {
                     var tree = Polymer.dom(editor.root).querySelector(".editor-tree");
 
-                    assert.equal(tree.style.display, "");
+                    expect(tree).to.have.deep.property("style.display", "");
                     done();
                 }, 200);
             });
 
             test("selects <juicy-tile-table> on click", function (done) {
-                click(table0, 100);
+                click(tw.table, 100);
 
                 setTimeout(function () {
-                    assert.equal(editor.selectedTiles[0], table0);
+                    expect(editor.selectedTiles[0]).to.equal(tw.table);
                     done();
                 }, 200);
             });
 
             test("scopes into <juicy-tile-table> on double click", function (done) {
-                dblclick(table0, 100);
+                dblclick(tw.table, 100);
 
                 setTimeout(function () {
-                    assert.equal(editor.selectedTiles.length, 0);
-                    assert.equal(editor.selectedList, table0);
+                    expect(editor.selectedTiles).to.be.empty;
+                    expect(editor.selectedList).to.equal(tw.table);
                     done();
                 }, 200);
             });
 
             test("selects a tile on click", function (done) {
-                dblclick(table0, 100);
-                click(div00, 150);
+                dblclick(tw.table, 100);
+                click(tw.tile(0), 150);
 
                 setTimeout(function () {
-                    assert.equal(editor.selectedTiles.length, 1);
-                    assert.equal(editor.selectedTiles[0], td00());
+                    var td = tw.cell(0);
+
+                    expect(editor.selectedTiles).to.have.length(1);
+                    expect(editor.selectedTiles[0]).to.equal(td);
                     done();
                 }, 200);
             });
 
             test("selects another tile on click", function (done) {
-                dblclick(table0, 100);
-                click(div00, 125);
-                click(div01, 150);
+                dblclick(tw.table, 100);
+                click(tw.tile(0), 125);
+                click(tw.tile(1), 150);
 
                 setTimeout(function () {
-                    assert.equal(editor.selectedTiles.length, 1);
-                    assert.equal(editor.selectedTiles[0], td01());
+                    var td = tw.cell(1);
+
+                    expect(editor.selectedTiles).to.have.length(1);
+                    expect(editor.selectedTiles[0]).to.equal(td);
                     done();
                 }, 200);
             });
 
-            //test("selects multiple tiles on ctrl + click", function (done) {
-            //    dblclick(table0, 100);
-            //    click(div00, 125);
-            //    ctrlClick(div01, 150);
+            /*test("selects multiple tiles on ctrl + click", function (done) {
+                dblclick(tw.table, 100);
+                click(tw.tile(0), 125);
+                ctrlClick(tw.tile(1), 150);
 
-            //    setTimeout(function () {
-            //        assert.equal(editor.selectedTiles.length, 2);
-            //        assert.equal(editor.selectedTiles[0], td00());
-            //        assert.equal(editor.selectedTiles[1], td01());
-            //        done();
-            //    }, 200);
-            //});
+                setTimeout(function () {
+                    var td0 = tw.cell(0);
+                    var td1 = tw.cell(1);
 
-            test("changes width of a tile", function (done) {
-                dblclick(table0, 100);
-                click(div00, 125);
+                    assert.equal(editor.selectedTiles.length, 2);
+                    assert.equal(editor.selectedTiles[0], td0);
+                    assert.equal(editor.selectedTiles[1], td1);
+                    done();
+                }, 200);
+            });*/
+
+            test("changes width of a tile on width button click", function (done) {
+                dblclick(tw.table, 100);
+                click(tw.tile(0), 125);
 
                 setTimeout(function () {
                     var btn = Polymer.dom(editor.root).querySelector(".editor-simple-form .width-section button:nth-child(6)");
@@ -236,15 +179,15 @@
                 }, 150);
                 
                 setTimeout(function () {
-                    var rec = div00.getBoundingClientRect();
-                    assert.equal(page.width / 2, rec.width);
+                    var rec = tw.tile(0).getBoundingClientRect();
+                    expect(rec.width).to.be.equal(page.width / 2);
                     done();
                 }, 200);
             });
 
-            test("changes priority of a tile", function (done) {
-                dblclick(table0, 100);
-                click(div00, 125);
+            test("changes priority of a tile on priority arrow button click", function (done) {
+                dblclick(tw.table, 100);
+                click(tw.tile(0), 125);
 
                 setTimeout(function () {
                     var btn = Polymer.dom(editor.root).querySelector(".editor-simple-form .position-section button:nth-child(2)");
@@ -252,16 +195,15 @@
                 }, 150);
 
                 setTimeout(function () {
-                    var td = Polymer.dom(table0.shadowRoot).querySelector("td");
-                    var id = td.id;
-                    assert.equal(id, 1);
+                    var td = tw.nthCell(1);
+                    expect(td).to.have.property("id", "1");
                     done();
                 }, 200);
             });
 
-            test("hides a tile", function (done) {
-                dblclick(table0, 100);
-                click(div00, 125);
+            test("hides a tile on eye button click", function (done) {
+                dblclick(tw.table, 100);
+                click(tw.tile(0), 125);
 
                 setTimeout(function () {
                     var btn = Polymer.dom(editor.root).querySelector(".editor-simple-form .visible-section button");
@@ -269,9 +211,9 @@
                 }, 150);
 
                 setTimeout(function () {
-                    var tds = Polymer.dom(table0.shadowRoot).querySelectorAll("td");
-                    assert.equal(tds.length, 1);
-                    assert.equal(tds[0].id, 1);
+                    var tds = tw.cells();
+                    expect(tds).to.have.length(1);
+                    expect(tds[0]).to.have.property("id", "1");
                     done();
                 }, 200);
             });
