Replace to.equal with to.contain in a test

--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -81,7 +81,7 @@
 
             test("finds all <juicy-tile-table> on the page", function () {
                 tables.forEach(function (t, i) {
-                    expect(editor.lists[i]).to.equal(t);
+                    expect(editor.lists).to.contain(t);
                 });
             });
 
