--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,11 @@
     <script>
       WCT.loadSuites([
         "basic-test.html",
-        "basic-test.html?dom=shadow"
+        "basic-test.html?dom=shadow",
+        "dom-test.html",
+        "dom-test.html?dom=shadow",
+        "setup-test.html",
+        "setup-test.html?dom=shadow"
       ]);
     </script>
 </body>
