Fix array equality expectation
We do not require particular order
Juicy/juicy-tile-editor/issues/139

--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -63,7 +63,7 @@
             });
 
             test("finds all <juicy-tile-table> on the page", function () {
-                expect(editor.lists).to.deep.equal(tables);
+                expect(editor.lists).to.contain.members(tables);
             });
 
             test("hides and shows sidebar", function (done) {
