Add first draft of predefined setups
Starcounter/RebelsLounge/issues/14

--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -17,8 +17,9 @@
             <button on-click="toggleTree" class="btn-tree">List</button>
         </div>
         <template is="dom-if" if="{{!showMore}}" restamp>
-            <div class="editor-simple-form">
+            <div class="editor-simple-form" style="overflow: auto;">
                 <div class="editor-form-section save-section">
+                    <!-- <button type="button" class="btn" on-click="applyPredefinedSetup">Predefined</button> -->
                     <button type="button" class="btn" on-click="saveSetup" disabled="{{!isModified}}">Save</button>
                     <button type="button" class="btn" on-click="resetSetup">Reset</button>
                 </div>
